# bkf-ai

./: .gitignore  ARCHITECTURE.md  AUDIT_RESPONSE_HE.md  BUILD_ON_MAC.md  KNOWN_LIMITATIONS.md  PROGRESS.md  PROJECT_STATUS_HE.md  README.md  ROADMAP.md  SOURCE-FILES.txt  UPDATE-INSTRUCTIONS.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: mac-build-proof.yml
docs/: BKF_SIDECAR_FORMAT.md  LOCAL_API.md
evidence/: README.md  manifest.json  probe-evidence.mjs  probe-results.json  verify-evidence.mjs
plugins/otzaria-bkf-bkc/: index.html  manifest.json  package.json  tsconfig.json  vite.config.ts
plugins/otzaria-bkf-bkc/src/: main.ts  otzaria.d.ts  styles.css
scripts/: package-plugin.mjs  verify-project.mjs
src/: App.tsx  api.ts  styles.css  types.ts  virtualization.test.ts  virtualization.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bkf-core/: Cargo.toml
src-tauri/bkf-core/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/catalog/: Cargo.toml
src-tauri/catalog/src/: lib.rs  models.rs
src-tauri/container-probe/: Cargo.toml
src-tauri/container-probe/src/: lib.rs
src-tauri/converter-core/: Cargo.toml
src-tauri/converter-core/examples/: convert.rs
src-tauri/converter-core/src/: lib.rs
src-tauri/converter-core/tests/: golden_conversion.rs
src-tauri/icons/: icon.icns
src-tauri/local-api/: Cargo.toml
src-tauri/local-api/src/: lib.rs
src-tauri/scanner-core/: Cargo.toml
src-tauri/scanner-core/src/: lib.rs
src-tauri/scanner-core/tests/fixtures/: sample-unknown.book
src-tauri/search-core/: Cargo.toml
src-tauri/search-core/src/: lib.rs
src-tauri/src/: classification.rs  conversion.rs  database.rs  lib.rs  main.rs  models.rs  scanner.rs
src-tauri/text-extract/: Cargo.toml
src-tauri/text-extract/src/: lib.rs
src/components/: LibraryPanel.tsx  PdfViewer.tsx  RepositorySelector.tsx  SearchResults.tsx  StatusBar.tsx  ViewerPanel.tsx
src/hooks/: useDebouncedValue.ts
