[package]
name = "bkf-local-api"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
bkf-bkf-core = { path = "../bkf-core" }
bkf-catalog = { path = "../catalog" }
bkf-converter-core = { path = "../converter-core" }
bkf-search-core = { path = "../search-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
